2008-07-18  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for sourceforge.net bug #2016128.
	* include/avr/iom32m1.h (CAN_TOVF_vect): Add missing underscore in 
	definition.
	* include/avr/iom32c1.h (OCR1A): Fix address to be 0x88.

2008-07-18  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iotn13a.h (PRR): Change address of PRR register to 0x25.

2008-07-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23850.
	* include/avr/iom8.h (MCUSR): Defined as an alias for MCUCSR.

2008-07-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for sourceforge.net bug #2018957.
	* include/avr/iom1284p.h (SPM_PAGESIZE): Fix value to 256.

2008-07-17  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23871.
	* include/avr/power.h: Enable clock_prescale_set() macro for ATmega32U4
	and ATmega32C1.
	* NEWS: Add to fixed bug list.

2008-07-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox (faq_regbind): Fix a typo.

2008-06-25  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iotn13a.h: Fix idempotent guard.

2008-06-25  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATtiny13A.
	* devtools/gen-avr-lib-tree.sh: Ditto.
	* include/avr/Makefile.am: Ditto.
	* include/avr/io.h: Ditto.
	* doc/api/main_page.dox: Ditto.
	* doc/api/using-tools.dox: Ditto.
	* include/avr/power.h: Ditto.
	* include/avr/sleep.h: Ditto.
	* include/avr/iotn13a.h: Add new file.
	* NEWS: Add news item.

2008-06-18  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23554.
	* include/avr/iom32u4.h: Fix bit name definitions.

2008-06-18  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23261.
	* include/avr/power.h: Add power_all_enable() and power_all_disable for
	AT90USB82 and AT90USB162.

2008-06-18  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iom48.h: Add fuse, and signature information.